--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,12 +21,16 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
+
+
             <h1 class="text-center mb-4">로그인</h1>
 
+            <div th:if="${session.loginError}" class="alert alert-danger" role="alert">
+                <span th:if="${session.loginEmail}" th:text="${session.loginEmail} + '님, 로그인에 실패하셨습니다!'"></span>
+            </div>
+
             <form method="post" th:action="@{/login}">
-                <div th:if="${param.error}" class="alert alert-danger" role="alert">
-                    Invalid Email and Password.
-                </div>
+
 
                 <div th:if="${param.logout}" class="alert alert-info" role="alert">
                     Successfully logged out
